# PrismDB

./: .gitignore  Cargo.toml  README.md  baselines.json
.github/workflows/: ci.yml  nightly.yml
crates/prism-cli/: Cargo.toml
crates/prism-cli/src/: args.rs  main.rs
crates/prism-cli/tests/: campaign.rs  cluster.rs  cluster_lease.rs  determinism.rs  device.rs  enospc.rs  faults.rs  fencing.rs  generations.rs  ingestion.rs  layout.rs  lease.rs  merge_scheduler.rs  mirror.rs  novelty.rs  partition.rs  plan.rs  pq_margin.rs  s3_minio.rs  search_oracle.rs  sharded.rs  soak.rs  sql.rs  storage.rs  threshold_margin.rs  tombstone.rs
crates/prism-engine/: Cargo.toml
crates/prism-engine/src/: admission.rs  bench.rs  clock.rs  cluster.rs  cluster_corpus.rs  corpus.rs  delete.rs  drift.rs  engine.rs  evidence.rs  flight.rs  generations.rs  idempotency.rs  ingest.rs  ingestor.rs  lib.rs  merge.rs  model.rs  novelty.rs  oracle.rs  otlp.rs  plan.rs  rowsource.rs  sample.rs  scheduler.rs  search.rs  sharded.rs  source.rs  sql.rs  storage.rs  topk.rs  tsv.rs  tuning.rs  wal.rs
crates/prism-engine/src/gpu/: admission.rs  mod.rs  rerank.rs
crates/prism-engine/src/storage/: cold.rs  mirror.rs  object.rs  ownership.rs  s3.rs  sigv4.rs
crates/prism-engine/tests/: alloc.rs  integration.rs  tuning.rs
crates/prism-part/: Cargo.toml
crates/prism-part/src/: baseline.rs  catalog.rs  disk.rs  ext.rs  faults.rs  format.rs  fsck.rs  generation.rs  io.rs  legacy_v1.rs  lib.rs  mmap.rs  part.rs  partition.rs  store.rs
crates/prism-part/tests/: fuzz.rs
crates/prism-quantizer/: Cargo.toml
crates/prism-quantizer/src/: kernel.rs  kmeans.rs  lib.rs  pq.rs
crates/prism-sql/: Cargo.toml
crates/prism-sql/src/: ast.rs  binder.rs  lexer.rs  lib.rs  limits.rs  parser.rs
crates/prism-types/: Cargo.toml
crates/prism-types/src/: attributes.rs  embed.rs  error.rs  event.rs  half.rs  hash.rs  lib.rs  limits.rs  predicate.rs  query.rs  rng.rs  vector.rs
docs/: DECISIONS.md  DETERMINISM-CONTRACT.md  GENERATION-CONTRACT.md  INGESTION-CONTRACT.md  MERGE-CONTRACT.md  PRISM.md  PROGRESS.md  QUERY-CONTRACT.md  STORAGE-CONTRACT.md  UNSAFE-INVENTORY.md
infra/gpu-runner/: README.md  cloud-init.yaml  main.tf  variables.tf
scripts/: check-readme-quickstart.sh  check-unsafe-inventory.sh  make-fixtures.sh  new-golden-corpus.sh  partfmt.py
testing/cluster/v1/: MANIFEST.json  balanced.tsv  noise.tsv  overlap.tsv  zipf.tsv
testing/compat/: v3-source.tsv
testing/compat/corrupt-v2/absurd-length/parts/p00000001-89d9e286fbe4cc35/: body.off
testing/compat/corrupt-v2/block-checksum/parts/p00000001-89d9e286fbe4cc35/: rerank.vec
testing/compat/corrupt-v2/mutated-codebook/catalog/snapshots/: s00000001.json
testing/compat/corrupt-v2/truncated-column/: store.json
testing/compat/corrupt-v2/truncated-column/parts/p00000001-89d9e286fbe4cc35/: rerank.vec
testing/compat/corrupt-v2/unknown-codec/parts/p00000001-89d9e286fbe4cc35/: centroid.u32
testing/compat/corrupt-v2/unknown-feature/catalog/: CURRENT
testing/compat/corrupt-v2/unknown-feature/parts/p00000001-89d9e286fbe4cc35/: event_name.off
testing/compat/corrupt-v2/unknown-rerank-encoding/generations/: 11bc6235d83235d2.json
testing/compat/corrupt-v2/unknown-rerank-encoding/parts/p00000001-89d9e286fbe4cc35/: cost.f64  event_id.off
testing/compat/corrupt-v3/absurd-length/catalog/snapshots/: s00000001.json
testing/compat/corrupt-v3/absurd-length/parts/p00000001-e6ec0f17dc59d5c3/: observed_time.i64
testing/compat/corrupt-v3/absurd-length/parts/p00000001-eed509c6b198abe8/: error.u8
testing/compat/corrupt-v3/bad-body-crc/parts/p00000001-e6ec0f17dc59d5c3/: attrs.off
testing/compat/corrupt-v3/bad-offsets/parts/p00000001-e6ec0f17dc59d5c3/: body.off  cost.f64
testing/compat/corrupt-v3/bad-offsets/parts/p00000001-eed509c6b198abe8/: body.off
testing/compat/corrupt-v3/block-checksum/parts/p00000001-e6ec0f17dc59d5c3/: centroid.u32
testing/compat/corrupt-v3/block-checksum/parts/p00000001-eed509c6b198abe8/: rerank.vec
testing/compat/corrupt-v3/mutated-codebook/generations/: 11bc6235d83235d2.json  27db56054445d691.json
testing/compat/corrupt-v3/truncated-column/catalog/snapshots/: s00000001.json
testing/compat/corrupt-v3/truncated-column/parts/p00000001-e6ec0f17dc59d5c3/: rerank.vec
testing/compat/corrupt-v3/truncated-column/parts/p00000001-eed509c6b198abe8/: rerank.vec  tenant_id.off
testing/compat/corrupt-v3/unknown-codec/generations/: 27db56054445d691.json
testing/compat/corrupt-v3/unknown-codec/parts/p00000001-e6ec0f17dc59d5c3/: body.off  pq.codes
testing/compat/corrupt-v3/unknown-codec/parts/p00000001-eed509c6b198abe8/: trace_id.off
testing/compat/corrupt-v3/unknown-feature/parts/p00000001-e6ec0f17dc59d5c3/: error.u8
testing/compat/corrupt-v3/unknown-rerank-encoding/parts/p00000001-e6ec0f17dc59d5c3/: event_name.off  rerank.vec
testing/compat/corrupt/bad-offsets/: store.json
testing/compat/corrupt/bad-offsets/parts/p00000001-3a7bcc298396d148/: body.off  centroid.u32  manifest.json
testing/compat/corrupt/flipped-byte/parts/p00000001-3a7bcc298396d148/: error.u8  event_id.off  manifest.json  pq.codes  tenant_id.off  vectors.f32
testing/compat/corrupt/future-format/parts/p00000001-3a7bcc298396d148/: event_name.off  manifest.json
testing/compat/corrupt/mutated-codebook/parts/p00000001-3a7bcc298396d148/: event_time.i64  pq.codes
testing/compat/corrupt/truncated-column/catalog/snapshots/: s00000001.json
testing/compat/v1/parts/p00000001-3a7bcc298396d148/: body.off
testing/compat/v2/parts/p00000001-89d9e286fbe4cc35/: pq.codes
testing/compat/v3/: store.json
testing/compat/v3/parts/p00000001-eed509c6b198abe8/: observed_time.i64
testing/evidence/: adaptive.json  block-size.json  cost-model.json  cost-worksheet.json  fp16.json  kmeans-restarts.json  nprobe.json  pq-margin.json  registry.json  semantic-cluster.json  widths.json
testing/faults/: README.md  campaign.sh
testing/golden/: MANIFEST.json  expected.json
testing/golden/v1/: corpus.tsv
(+2 files in other folders)
