[package]
name = "prism-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "The prism command-line interface."

[[bin]]
name = "prism"
path = "src/main.rs"

[dependencies]
prism-types = { workspace = true }
prism-quantizer = { workspace = true }
prism-part = { workspace = true }
prism-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
prism-types = { workspace = true }
prism-part = { workspace = true }
prism-engine = { workspace = true }
serde_json = { workspace = true }
