[package]
name = "prism-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PrismDB engine: ingest, prune, centroid-range scan, exact rerank, semantic grouping, merge, re-embed."

[features]
# The real CUDA path. Off by default and not compiled in CI -- no GPU device or runner exists
# yet (docs/DETERMINISM-CONTRACT.md device edition §3). "GPU-ready, GPU-off".
cuda = []

[dependencies]
prism-types = { workspace = true }
prism-quantizer = { workspace = true }
prism-part = { workspace = true }
prism-sql = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
