[package]
name = "prism-part"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Immutable checksummed parts, content-addressed generations, and the atomic catalog for PrismDB."

[dependencies]
prism-types = { workspace = true }
prism-quantizer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
