[package]
name = "prism-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for PrismDB: events, queries, embeddings, hashing, deterministic RNG."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
